@@ -14,6 +14,9 @@ documents those changes that are of interest to users and admins.
  -- For a job step, add support for srun's --nodelist and --exclusive options
     to be used together.
  -- On slurmstepd failure, set node state to DRAIN rather than DOWN.
+ -- Fix bug in select/cons_res that would incorrectly satify a tasks's
+    --cpus-per-task specification by allocating the task CPUs on more than
+    one node.
 
 * Changes in SLURM 1.3.11
 =========================
